<resources>
    <string name="app_name">BlockText</string>
    <string name="app_logo">app-logo</string>
    <string name="pass_label">Password</string>
    <string name="email_label">Email</string>
    <string name="login_text_primary">Log In</string>
    <string name="sign_up_primary">Sign Up</string>
    <string name="resgister_banner">Create Account</string>
    <string name="signup_name">Name</string>
    <string name="logout">Log out</string>
    <string name="main_channel_name">Chat Notifications</string>
    <string name="channel_description">The main notifier channel for messages</string>
    <string name="type_a_message">Type a message</string>
    <string name="icon_send">icon for send button</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="online">Online</string>
    <string name="search">Search</string>
    <string name="conversations">Chats</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help &amp; Support</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="recent">Recent</string>
    <string name="message_sent">Message sent</string>
    <string name="message_delivered">Delivered</string>
    <string name="message_read">Read</string>
    <string name="message_failed">Failed to send</string>
    <string name="load_more">Load more</string>
    <string name="typing_status_active">typing...</string>
    <string name="offline">Offline</string>
    <string name="last_seen">Last seen %1$s</string>
    <string name="send_message">Send a message</string>
    <string name="notification_title">New message from %1$s</string>
    <string name="ic_stat_message_desc">Message Notification Icon</string>

    <!-- New strings for getTimeAgo -->
    <string name="time_ago_just_now">just now</string>
    <string name="time_ago_seconds">%d seconds ago</string>
    <string name="time_ago_minutes">%d minutes ago</string>
    <string name="time_ago_hours">%d hours ago</string>
    <string name="time_ago_days">%d days ago</string>
</resources>