<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anurag.slimchat.LoginActivity">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="402dp"
        android:layout_height="231dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/blocktext_website_favicon_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="308dp"
        android:layout_height="59dp"
        android:paddingLeft="10dp"
        android:background="@drawable/message_box_bg"
        android:ems="10"
        android:hint="@string/pass_label"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintVertical_bias="0.242" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="308dp"
        android:layout_height="59dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/message_box_bg"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_label"
        android:paddingLeft="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_logo" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="158dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="184dp"
        android:text="@string/login_text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="158dp"
        android:layout_height="65dp"
        android:layout_marginBottom="84dp"
        android:text="@string/sign_up_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.205" />


</androidx.constraintlayout.widget.ConstraintLayout>